fixed spacing

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -67,3 +67,74 @@ Text Editor
   color: white;
   text-align: center;
 }
+
+
+@media (max-width: 1024px){
+  .text-container {
+    width: calc(100%-500px);
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1025px) {
+  .text-container {
+    padding-left: 10%;
+  }
+}
+
+@media (min-width: 1600px) {
+  .text-container {
+    padding-left: 20%;
+  }
+}
+
+@media (min-width: 1800px) {
+  .text-container {
+    padding-left: 30%;
+  }
+}
+
+/*
+Suggestions
+*/
+
+@media (max-width: 1024px){
+  .suggestion {
+       padding: 1rem;
+       width: 300px;
+       margin: 1em 1em 0 0;
+
+       top: 0;
+       right:0;
+       bottom: 0;
+       position:absolute;
+   }
+}
+
+@media (min-width: 1025px) {
+   .suggestion {
+       padding: 1rem;
+       width: 500px;
+       margin: 1em 1em 0 0;
+       height: 200px;
+
+       top: 0px;
+       right:0;
+       bottom: 0;
+       position:absolute;
+   }
+}
+
+
+.spelling {
+   padding: 3px;
+   text-decoration: line-through;
+   text-decoration-color: red;
+}
+
+.options {
+   display: flex;
+   border: 1px solid #cccc;
+   padding: 1rem;
+   margin: 1em 1em 0 0;
+}
